--- a/app/src/main/res/layout/question_post_show_activity.xml
+++ b/app/src/main/res/layout/question_post_show_activity.xml
@@ -199,6 +199,7 @@
                         android:orientation="horizontal">
 
                         <ImageView
+                            android:id="@+id/ll_like_image"
                             android:layout_width="@dimen/feed_ic_size"
                             android:layout_height="@dimen/feed_ic_size"
                             android:layout_marginEnd="@dimen/feed_ic_margin"
@@ -206,6 +207,7 @@
                             app:tint="@color/grey_700" />
 
                         <TextView
+                            android:id="@+id/ll_like_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="@dimen/feed_text_interaction_size"
